Fixed overlay of link 'Privacy Policy' in footer on mobile devices

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -30,6 +30,7 @@
     font-weight: 400;
     line-height: 1.6;
     color: $white;
+    z-index: 9999;
   }
 
   &__info {
